Moving entities to BookApp.Dto

--- a/BookApp.DAL/BookApp.Dal.csproj
+++ b/BookApp.DAL/BookApp.Dal.csproj
@@ -22,4 +22,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookApp.Dto\BookApp.Dto.csproj" />
+  </ItemGroup>
+
 </Project>
